# subnet-calculator

./: README.md  prefixes.txt  pyproject.toml  requirements.txt
subnet_calc/: __init__.py  __main__.py
subnet_calc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_calc.py
